[project]
name = "ios-call-export"
version = "0.1.0"
description = "Export iPhone call history from encrypted local backups to CSV"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "iphone-backup-decrypt>=0.9.0",
    "python-dotenv>=1.2.2",
    "phonenumbers>=8.13.0",
    "sv-ttk>=2.6.1",
]

[project.optional-dependencies]
live = [
    "pymobiledevice3>=2.0.0",
]
